# llama.cpp

./: .gitignore  CMakeLists.txt  Makefile
common/: CMakeLists.txt  common-talk.cpp
common/talk/: .gitignore  CMakeLists.txt  speak  talk.cpp  to_speak.txt
common/talk/prompts/: talk-alpaca.txt
examples/: CMakeLists.txt
examples/talk/: CMakeLists.txt  speak.sh  talk.cpp
src/: CMakeLists.txt
